--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "d3-format": "^1.0.2",
     "d3-time-format": "^2.0.3",
     "fabric": "^2.3.1",
-    "react-intl": "^2.4.0",
+    "react-stockcharts": "file:../react-stockcharts/build",
     "save-svg-as-png": "=1.2.0"
   },
   "devDependencies": {
@@ -39,6 +39,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "connected-react-router": "^4.4.1",
     "css-loader": "^0.28.0",
     "d3": "^3.5.17",
     "d3-array": "^1.2.0",
@@ -51,6 +52,7 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "intl": "^1.2.5",
+    "jsdom": "^8.1.0",
     "json-loader": "^0.5.4",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
@@ -61,11 +63,13 @@
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-router-dom": "^4.3.1",
-    "connected-react-router": "^4.4.1",
+    "react-intl": "^2.6.0",
     "react-redux": "^5.0.4",
+    "react-router-dom": "^4.3.1",
     "redux": "^3.6.0",
     "redux-promise": "^0.5.3",
+    "rgbcolor": "^1.0.1",
+    "stackblur": "^1.0.0",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
     "webpack": "^2.3.3",
@@ -73,9 +77,6 @@
     "webpack-dev-server": "^2.4.2",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-visualizer-plugin": "^0.1.11",
-    "rgbcolor": "^1.0.1",
-    "stackblur": "^1.0.0",
-    "jsdom": "^8.1.0",
     "xmldom": "^0.1.22"
   }
 }
