--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "d3-format": "^1.0.2",
     "d3-time-format": "^2.0.3",
     "fabric": "^2.3.1",
+    "react-grid-layout": "file:react-grid-layout-0.14.5.tgz",
+    "react-stockcharts": "file:react-stockcharts-0.7.8.tgz",
     "save-svg-as-png": "=1.2.0"
   },
   "devDependencies": {
+    "@material-ui/core": "^3.1.1",
+    "@material-ui/icons": "^3.0.1",
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
@@ -61,10 +65,11 @@
     "lodash.throttle": "^4.1.1",
     "moment": "^2.18.1",
     "prop-types": "^15.5.8",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "raw-loader": "^0.5.1",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "react-intl": "^2.6.0",
-    "react-redux": "^5.0.4",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^3.6.0",
     "redux-promise": "^0.5.3",
