--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MarketWall Advanced Chart New Version. Post Operatore1.",
   "main": "webpack.config.js",
   "scripts": {
-    "dev": "webpack-dev-server --config webpack.config.js --cert=./resources/certificati/cert.pem --key=./resources/certificati/key.pem",
+    "dev": "webpack-dev-server --config webpack.config.js",
     "build": "make build"
   },
   "repository": {
