--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,12 +1,19 @@
 {
   "name": "AuroraInverter",
   "short_name": "AuroraInv",
-  "start_url": "/",
+  "start_url": "./",
   "display": "standalone",
   "theme_color": "#ffff00",
   "background_color": "#ffff00",
   "description": "Aurora inverter web app.",
   "orientation": "portrait",
+
+  "gcm_sender_id": "123456789",
+  "gcm_user_visible_only": true,
+  "permissions": [
+    "gcm"
+  ],
+
   "icons": [{
     "src": "resources/images/favicon/launcher-icon-0x.png",
     "sizes": "48x48",
