--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/xreef/aurora#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "d3-format": "^1.0.2",
     "d3-time-format": "^2.0.3",
@@ -54,6 +55,11 @@
     "d3-selection": "^1.0.5",
     "d3-shape": "^1.0.6",
     "d3-time-format": "^2.0.5",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "intl": "^1.2.5",
@@ -64,7 +70,7 @@
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
-    "moment": "^2.18.1",
+    "moment": "^2.22.2",
     "prop-types": "^15.5.8",
     "raw-loader": "^0.5.1",
     "react": "^16.5.2",
@@ -73,7 +79,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^3.6.0",
-    "redux-promise": "^0.5.3",
+    "redux-logic": "^2.0.1",
     "rgbcolor": "^1.0.1",
     "stackblur": "^1.0.0",
     "style-loader": "^0.16.1",
