Add calendar to daily

--- a/package.json
+++ b/package.json
@@ -22,14 +22,25 @@
   },
   "homepage": "https://github.com/xreef/aurora#readme",
   "dependencies": {
+    "@material-ui/core": "^3.1.1",
+    "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "d3-format": "^1.0.2",
     "d3-time-format": "^2.0.3",
     "fabric": "^2.3.1",
+    "moment": "^2.22.2",
     "perfect-scrollbar": "^1.4.0",
+    "prop-types": "^15.5.8",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "react-grid-layout": "file:react-grid-layout-0.14.5.tgz",
+    "react-intl": "^2.6.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "react-stockcharts": "file:react-stockcharts-0.7.8.tgz",
+    "redux": "^3.6.0",
+    "redux-logic": "^2.0.1",
     "save-svg-as-png": "=1.2.0"
   },
   "devDependencies": {
@@ -70,16 +81,7 @@
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
-    "moment": "^2.22.2",
-    "prop-types": "^15.5.8",
     "raw-loader": "^0.5.1",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-intl": "^2.6.0",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
-    "redux": "^3.6.0",
-    "redux-logic": "^2.0.1",
     "rgbcolor": "^1.0.1",
     "stackblur": "^1.0.0",
     "style-loader": "^0.16.1",
