--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,12 @@
 {
   "extends": "airbnb",
+  "parser": "babel-eslint",
   "rules": {
     "func-names": ["error", "never"],
     "react/destructuring-assignment": "off",
     "comma-dangle": "off",
-    "react/forbid-prop-types": "off"
+    "react/forbid-prop-types": "off",
+    "max-len": "off"
   },
   "env": {
     "es6": true,
