--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MarketWall Advanced Chart New Version. Post Operatore1.",
   "main": "webpack.config.js",
   "scripts": {
-    "dev": "webpack-dev-server --config webpack.config.js",
+    "dev": "webpack-dev-server --config webpack.config.js --mode=development ",
     "build": "make build"
   },
   "repository": {
@@ -26,9 +26,11 @@
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "canvas": "^2.1.0",
     "d3-format": "^1.0.2",
     "d3-time-format": "^2.0.3",
     "fabric": "^2.3.1",
+    "lodash.throttle": "^4.1.1",
     "moment": "^2.22.2",
     "perfect-scrollbar": "^1.4.0",
     "prop-types": "^15.5.8",
@@ -41,56 +43,58 @@
     "react-stockcharts": "file:react-stockcharts-0.7.8.tgz",
     "redux": "^3.6.0",
     "redux-logic": "^2.0.1",
-    "save-svg-as-png": "=1.2.0",
-    "lodash.throttle": "^4.1.1"
+    "save-svg-as-png": "=1.2.0"
   },
   "devDependencies": {
-    "@material-ui/core": "^3.1.1",
+    "@babel/core": "^7.1.6",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-react": "^7.0.0",
+    "@material-ui/core": "^3.5.1",
     "@material-ui/icons": "^3.0.1",
     "autoprefixer-loader": "^3.2.0",
-    "babel-core": "^6.24.1",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-react-intl": "^2.3.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-react-intl": "^3.0.1",
     "connected-react-router": "^4.4.1",
-    "css-loader": "^0.28.0",
-    "d3": "^3.5.17",
-    "d3-array": "^1.2.0",
-    "d3-collection": "^1.0.3",
+    "css-loader": "^1.0.1",
+    "d3": "^5.7.0",
+    "d3-array": "^2.0.2",
+    "d3-collection": "^1.0.7",
     "d3-dsv": "^1.0.10",
-    "d3-format": "^1.2.0",
-    "d3-scale": "^1.0.6",
-    "d3-selection": "^1.0.5",
-    "d3-shape": "^1.0.6",
-    "d3-time-format": "^2.0.5",
-    "eslint": "^5.3.0",
+    "d3-format": "^1.3.2",
+    "d3-scale": "^2.1.2",
+    "d3-selection": "^1.3.2",
+    "d3-shape": "^1.2.2",
+    "d3-time-format": "^2.1.3",
+    "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.0",
     "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
+    "file-loader": "^2.0.0",
     "intl": "^1.2.5",
     "jsdom": "^8.1.0",
-    "json-loader": "^0.5.4",
-    "less": "^2.7.2",
-    "less-loader": "^4.0.3",
+    "json-loader": "^0.5.7",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
     "raw-loader": "^0.5.1",
     "rgbcolor": "^1.0.1",
     "stackblur": "^1.0.0",
-    "style-loader": "^0.16.1",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.3.3",
-    "webpack-dev-middleware": "^1.10.1",
-    "webpack-dev-server": "^2.4.2",
-    "webpack-hot-middleware": "^2.18.0",
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-middleware": "^3.4.0",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-hot-middleware": "^2.24.3",
     "webpack-visualizer-plugin": "^0.1.11",
     "xmldom": "^0.1.22"
   }
