--- a/package.json
+++ b/package.json
@@ -75,8 +75,10 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.0",
+    "extract-loader": "^3.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^2.0.0",
+    "html-loader": "^0.5.5",
     "intl": "^1.2.5",
     "jsdom": "^8.1.0",
     "json-loader": "^0.5.7",
