--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "website-react-chart-container",
+  "name": "aurora-server",
   "version": "0.2.0",
-  "description": "MarketWall Advanced Chart New Version. Post Operatore1.",
+  "description": "Aurora Power-One rest e web server",
   "main": "webpack.config.js",
   "scripts": {
     "dev": "webpack-dev-server --config webpack.config.js --mode=development ",
