--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/xreef/aurora#readme",
   "dependencies": {
+    "@formatjs/intl-pluralrules": "^1.5.0",
+    "@formatjs/intl-relativetimeformat": "^4.5.7",
     "@material-ui/core": "^3.1.1",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
@@ -33,16 +35,17 @@
     "lodash.throttle": "^4.1.1",
     "moment": "^2.22.2",
     "perfect-scrollbar": "^1.4.0",
-    "prop-types": "^15.5.8",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-grid-layout": "file:react-grid-layout-0.14.5.tgz",
-    "react-intl": "^2.6.0",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
+    "react-intl": "^3.11.0",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-stockcharts": "file:react-stockcharts-0.7.8.tgz",
-    "redux": "^3.6.0",
-    "redux-logic": "^2.0.1",
+    "redux": "^4.0.5",
+    "redux-logic": "^2.1.1",
+    "rxjs": "^6.5.4",
     "save-svg-as-png": "=1.2.0"
   },
   "devDependencies": {
